# ys-origin-archipelago

./: .gitignore  FEEDBACK_TRIAGE.md  README.md  RE_FINDINGS.md  ROADMAP_2.0.md  Ys-Origin.yaml  pyproject.toml  requirements.txt
client/: __init__.py  ap_client.py  game_state.py  memory.py  mod_bridge.py  offset_store.py  offsets.json  offsets.py  overlay.py  suppression.py
mod/: CMakeLists.txt  README.md
mod/src/: chat.cpp  dllmain.cpp  exports.def  hook_ap.cpp  hook_bridge.cpp  hook_d3d9.cpp  hook_input.cpp  hook_saveredir.cpp  hook_steamcloud.cpp  hook_vm.cpp  hook_watch.cpp  menu.cpp  overlay.cpp  proxy_dinput8.cpp  shop.cpp  warpmap.cpp
tests/: test_detect_audit.py  test_item_curation.py  test_logic_criticality.py  test_logic_reachability.py  test_shop_tracker.py  test_start_loadout.py  test_suppression.py  test_warp_limits.py
tools/: __init__.py  blessing_bits.json  build_apworld.py  build_dataset.py  build_locations.py  entfind.py  extract_icons.py  flaglog.py  gwatch.py  hpfind.py  invinfo.py  ni_unpack.py  roomfind.py  scan.py  scenefind.py  scenelist.py  scenelog.py  snapdiff.py  weapon_poke.py  ws_tls_proxy.py  xso_catalog.py  xso_dis.py  xso_logic.py
ys_origin/: __init__.py  data_tables.py  items.py  locations.py  options.py  regions.py  rules.py
ys_origin/data/: character_items.json  chests.json  items.json  locations.json  master_chests.csv  room_graph_notes.md  room_logic.json
ys_origin/docs/: setup_en.md
